@@ -2,6 +2,7 @@ ChangeLog file for Endian libencloud
 
 libencloud 0.X.Y:
 	- Create routes not only for individual IP address but also for network [CONNECT-124]
+	- Handle Switchboard fallback server [CONNECT-114]
 	- api/status: empty errors and need not being reemitted
 	- *ece: don't getCertificate if we already have a valid one;
 	  fail if getInfo yields valid=false
